--- a/confetti_cuisine_mvc/public/css/confetti_cuisine.css
+++ b/confetti_cuisine_mvc/public/css/confetti_cuisine.css
@@ -1,61 +1,81 @@
-@import url("https://fonts.googleapis.com/css?family=Baloo+Bhaina");
-
+@import url('https://fonts.googleapis.com/css?family=Baloo+Bhaina');
 body {
-    margin: 0;
-    padding-top: 150px;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    color: #625a56;
-  }
-  
-  #nav {
-    width: 100%;
-    height: 110px;
-    padding: 20px 0 5px 0;
-    border-bottom: solid 8px #ee3114;
-    box-shadow: 10px 10px 10px #ccc;
-    position: absolute;
-    top: 0;
-  }
-  
-  #title {
-    color: #625a56;
-    margin: 0;
-    font-family: "Baloo Bhaina";
-    text-transform: uppercase;
-  }
-  
-  img {
-    width: 100%;
-  }
-  
-  a {
-    color: #333;
-    text-decoration: none;
-  }
-  
-  #nav a {
-    text-decoration: none;
-  }
-  
-  .nav-align {
-    text-align: center;
-    padding: 3px 0;
-  }
-  
-  .container {
-    padding: 0% 10%;
-  }
-  
-  .button {
-    background-color: #ed4a0f;
-    padding: 0.3vw 3vw;
-    border-radius: 2px;
-    cursor: pointer;
-    display: inline-block;
-    color: #fff;
-  }
-  
-  .button:hover {
-    background-color: #ffb99f;
-    color: #ed4a0f;
-  }
+  margin: 0;
+  padding-top: 80px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#nav {
+  padding-top: 20px;
+  width: 100%;
+  height: 60px;
+  /*background-color: #ED4A0F;*/
+  border-bottom: solid 8px #EE3114;
+  box-shadow: 10px 10px 10px #ccc;
+  position: absolute;
+  top: 0;
+}
+
+.title {
+  color: #D3611E;
+}
+
+img {
+  width: 100%;
+}
+
+a {
+  color: #333;
+}
+
+.col-6 {
+  width: 46%;
+  float: left;
+  padding: 0% 2%;
+}
+
+.col-3 {
+  width: 25%;
+  float: left;
+}
+
+.center {
+  text-align: center;
+}
+
+.container {
+  padding: 0% 10%;
+}
+
+.button {
+  background-color: #ED4A0F;
+  padding: .5vw 3vw;
+  border-radius: 6px;
+  cursor: pointer;
+  display: inline-block;
+}
+
+.button:hover {
+  background-color: #EE3114;
+}
+
+input {
+  display: block;
+}
+
+.subscribers {
+  margin: 0 100px;
+  padding: 20px;
+  border: 2px solid orange;
+}
+
+.data-form {
+  width: 300px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.table {
+  margin: 0 auto;
+  width: 900px;
+}
